// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Coordinator Screen Default 1`] = `
<div
  dir="rtl"
  style={
    Object {
      "height": "100vh",
    }
  }
>
  <div
    className="coordinatorScreen"
  >
    <div
      className="appHeader"
    >
      <div
        className="headerRow"
      >
        <button
          className="MuiButtonBase-root-9 MuiIconButton-root-0 rightButton"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          type="button"
        >
          <span
            className="MuiIconButton-label-8"
          >
            <svg
              aria-hidden={true}
              className="MuiSvgIcon-root-12"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
              />
            </svg>
          </span>
        </button>
        <div
          className="title infoTitle"
        >
          כותרת
        </div>
        <button
          className="MuiButtonBase-root-9 MuiIconButton-root-0 leftButton"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          type="button"
        >
          <span
            className="MuiIconButton-label-8"
          >
            <svg
              aria-hidden={true}
              className="MuiSvgIcon-root-12"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 22c1.1 0 2-.9 2-2h-4c0 1.1.9 2 2 2zm6-6v-5c0-3.07-1.63-5.64-4.5-6.32V4c0-.83-.67-1.5-1.5-1.5s-1.5.67-1.5 1.5v.68C7.64 5.36 6 7.92 6 11v5l-2 2v1h16v-1l-2-2zm-2 1H8v-6c0-2.48 1.51-4.5 4-4.5s4 2.02 4 4.5v6z"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
    <div
      className="screenContent"
    >
      <div
        className="storyContent"
      >
        תוכן העמוד
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Coordinator Screen Fab 1`] = `
<div
  dir="rtl"
  style={
    Object {
      "height": "100vh",
    }
  }
>
  <div
    className="coordinatorScreen"
  >
    <div
      className="appHeader"
    >
      <div
        className="headerRow"
      >
        <button
          className="MuiButtonBase-root-9 MuiIconButton-root-0 rightButton"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          type="button"
        >
          <span
            className="MuiIconButton-label-8"
          >
            <svg
              aria-hidden={true}
              className="MuiSvgIcon-root-12"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
              />
            </svg>
          </span>
        </button>
        <div
          className="title infoTitle"
        >
          כותרת
        </div>
        <button
          className="MuiButtonBase-root-9 MuiIconButton-root-0 leftButton"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          type="button"
        >
          <span
            className="MuiIconButton-label-8"
          >
            <svg
              aria-hidden={true}
              className="MuiSvgIcon-root-12"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 22c1.1 0 2-.9 2-2h-4c0 1.1.9 2 2 2zm6-6v-5c0-3.07-1.63-5.64-4.5-6.32V4c0-.83-.67-1.5-1.5-1.5s-1.5.67-1.5 1.5v.68C7.64 5.36 6 7.92 6 11v5l-2 2v1h16v-1l-2-2zm-2 1H8v-6c0-2.48 1.51-4.5 4-4.5s4 2.02 4 4.5v6z"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
    <div
      className="screenContent"
    >
      <div
        className="storyContent"
      >
        תוכן העמוד
      </div>
    </div>
    <button
      className="MuiButtonBase-root-9 MuiFab-root-34 makeStyles-fab-33 MuiFab-extended-38 MuiFab-primary-36"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <span
        className="MuiFab-label-35"
      >
        <svg
          aria-hidden={true}
          className="MuiSvgIcon-root-12"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
          />
        </svg>
        <div
          className="text"
        >
          הוסף תור
        </div>
      </span>
    </button>
  </div>
</div>
`;

exports[`Storyshots Components/Coordinator Screen Sticky Content 1`] = `
<div
  dir="rtl"
  style={
    Object {
      "height": "100vh",
    }
  }
>
  <div
    className="coordinatorScreen"
  >
    <div
      className="appHeader"
    >
      <div
        className="headerRow"
      >
        <button
          className="MuiButtonBase-root-9 MuiIconButton-root-0 rightButton"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          type="button"
        >
          <span
            className="MuiIconButton-label-8"
          >
            <svg
              aria-hidden={true}
              className="MuiSvgIcon-root-12"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
              />
            </svg>
          </span>
        </button>
        <div
          className="title infoTitle"
        >
          כותרת
        </div>
        <button
          className="MuiButtonBase-root-9 MuiIconButton-root-0 leftButton"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          type="button"
        >
          <span
            className="MuiIconButton-label-8"
          >
            <svg
              aria-hidden={true}
              className="MuiSvgIcon-root-12"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 22c1.1 0 2-.9 2-2h-4c0 1.1.9 2 2 2zm6-6v-5c0-3.07-1.63-5.64-4.5-6.32V4c0-.83-.67-1.5-1.5-1.5s-1.5.67-1.5 1.5v.68C7.64 5.36 6 7.92 6 11v5l-2 2v1h16v-1l-2-2zm-2 1H8v-6c0-2.48 1.51-4.5 4-4.5s4 2.02 4 4.5v6z"
              />
            </svg>
          </span>
        </button>
      </div>
      <div
        className="stickyComponent"
      >
        <div
          style={
            Object {
              "padding": 10,
            }
          }
        >
           חלק דביק בראש העמוד
        </div>
      </div>
    </div>
    <div
      className="screenContent"
    >
      <div
        className="storyContent"
      >
        תוכן העמוד
      </div>
    </div>
  </div>
</div>
`;
